OpalPO-1567: Update DraftAccountStatus enum and schema (#823)
* PO-1445: Fixed integration test pipeline failures by aligning tests with real DB data

* PO-1567: Add happy path tests for patching draft account (Pending, Rejected, Deleted)

* PO-1567: Remove invalid happy path test for 'Pending' DraftAccountStatus

* PO-1567: Add reason_text to updateDraftAccount schema

* PO-1567: Add reason_text to UpdateDraftAccountRequestDto

* PO-1567, PO-745: Update functional test to replace 'Pending' with 'Publishing Pending'

* PO-1567,PO-745: Fix 'Publishing Pending' casing in enum, schema, and patch draft account tests

* PO-1567: Replace valueOf with fromLabel for DraftAccountStatus mapping and remove toUpperCase()

* PO-1567: Fix DraftAccountStatus test expectations after enum label update